// each other on Github, so don't worry too much on using the right prefix.
:issue: https://github.com/elastic/apm-server/issues/
:pull: https://github.com/elastic/apm-server/pull/


=== APM Server version HEAD
https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828e0761d\...master[View commits]

==== Breaking changes
- Renaming and reverse boolean `in_app` to `library_frame` {pull}385[385].
- Renaming `app` to `service` {pull}377[377]
- Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
- Renaming `trace` to `span` {pull}352[352].

==== Bug fixes
- Updated systemd doc url {pull}354[354]

==== Added
- Support for uploading sourcemaps {pull}302[302].
- app.environment {pull}366[366]

==== Deprecated

==== Known Issues



=== APM Server version 6.1
https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74\...421db9d1e10935e7b9aec00b64cf66ad2d50d797[View commits]

==== Breaking changes
- Make `transaction.result` a mandatory field {pull}250[250].
- Allow ES template index prefix to be `apm` {pull}152[152].
- Remove `git_ref` from Intake API and Elasticsearch output {pull}158[158].

==== Bug fixes
- Fix dashboard loading for Kibana 5x {pull}221[221].
- Fix command for loading dashboards in docs {pull}205[205].
- Log a warning message if secret token is set but ssl is not {pull}204[204].
- Fix wrong content-type in response {pull}171[171].
- Remove duplicate dashboard entries {pull}162[162].
- Remove `context.db` from `fields.yml` for consistency, has not been indexed before {pull}159[159].

==== Added
- Added wildcard matching for allowed origins for frontend {pull}287[287].
- Added rate limit per IP for frontend {pull}257[257].
- Allow null for all optional fields {pull}253[253].
- Make context.app.language.version optional {pull}246[246].
- CORS support for frontend {pull}244[244].
- Added support for frontend {pull}227[227].