@@ -1,0 +1,4 @@
+package about
+
+const gitRef = "6819aa06a0ed7ecc18f9bb7291d65b1ca50917fd"
+const updated = "2017-12-12 13:30:20 +0000 UTC"
