@@ -2,25 +2,25 @@
 [float]
 === High Availability
 
-The API exposed by APM Server is a regular HTTP JSON API. 
-To achieve high availability, 
+The API exposed by APM Server is a regular HTTP JSON API.
+To achieve high availability,
 you can place multiple instances of APM Server behind a regular HTTP load balancer,
 for example HAProxy or nginx.
 
-If an instance of APM Server should fail, 
+If an instance of APM Server should fail,
 the load balancer will remove it from the load balancing rotation after a short period of time.
 
-APM Server endpoint `/healthcheck` always returns a `HTTP 200`.
-You can configure your load balancer to send HTTP requests to this endpoint 
+APM Server endpoint `/` always returns a `HTTP 200`.
+You can configure your load balancer to send HTTP requests to this endpoint
 to determine if a given APM Server is up and running.
 
-APM Server maintains a small buffer internally. 
+APM Server maintains a small buffer internally.
 Data coming from agents is kept here until it can be delivered to Elasticsearch.
 Under normal circumstance, data is forwarded to Elasticsearch immediately.
-In situations in which Elasticsearch is down briefly 
-or in situations where there is a sudden influx of data and Elasticsearch cannot ingest it all at once, 
+In situations in which Elasticsearch is down briefly
+or in situations where there is a sudden influx of data and Elasticsearch cannot ingest it all at once,
 the buffer acts as a temporary storage until the data can be ingested by Elasticsearch.
 
-This also means that if a given APM Server process fails, 
-for example because the machine its running on experiences an issue, 
+This also means that if a given APM Server process fails,
+for example because the machine its running on experiences an issue,
 the data that has not yet been forwarded to Elasticsearch is lost.
