@@ -8,6 +8,7 @@
 https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828e0761d\...master[View commits]
 
 ==== Breaking changes
+- Move the healthcheck URK `/healthcheck` to `/` and include some `about` info if the request is authenticated {pull}395[395].
 - Renaming and reverse boolean `in_app` to `library_frame` {pull}385[385].
 - Renaming `app` to `service` {pull}377[377]
 - Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
